# experiment-control

./: .gitignore  AGENTS.md  ISSUES.md  README.md  REFACTOR_PLAN.md  implement_react.md  laserlock_legacy_client.py  pyproject.toml
bench/: FINDINGS.md  README.md  SPEEDUP_IMPROVEMENTS.md  run_microbench.py  run_tui_render_bench.py
docs/: CHANGELOG-2026-05-review-followups.md  REVIEW_FOLLOWUPS.md  adaptive_studies.md  composite_devices.md  device_spec_reload.md  device_state_save_restore.md  federation.md  influx_writer.md  interlock.md  manager_start.md  other_improvements.md  performance_review_2026-07-09.md  protocol.md  pydantic_config_validation.md  python_client_sdk.md  sequencer_config.md  sequencer_library_plan.md  sequencer_progress.md  sequencer_visual_editor.md  sequencer_visual_editor_plan.md  shm_ring_arm_memory_ordering.md  state_machines.md  stream_telemetry_loss_audit.md  stream_telemetry_loss_audit_plan.md  testing.md  todo.md  watchdog.md  web_ui_refactor_plan.md
scripts/: build_packaged_ui.ps1  sync.ps1  sync_all.ps1  sync_ui.ps1
tests/: _temp_utils.py  test_adaptive_controller.py  test_client_apis.py  test_client_apis_subsystems.py  test_clock_skew_probe.py  test_command_interceptors.py  test_command_journal.py  test_config_validation.py  test_dealer_request_id_correlation.py  test_deferred_cleanups.py  test_device_router_async_audit.py  test_device_router_federation.py  test_device_router_reply_doorbell.py  test_driver_capabilities.py  test_driver_connect_recovery.py  test_driver_loading.py  test_driver_registration.py  test_fastapi_extra_ui.py  (+97 more)
(+1111 files in other folders)
