[project]
name = "experiment-control"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Olivier Grasdijk", email = "o.grasdijk@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "adaptive",
    "fastapi>=0.128.1",
    "h5py>=3.15.1",
    "linien-client==2.1.0",
    "nkt-basik>=0.4.0",
    "numpy>=2.4.1",
    "orjson>=3.11.9",
    "pyvisa>=1.16.1",
    "pyyaml>=6.0.3",
    "pyzmq>=27.1.0",
    "textual>=7.4.0",
    "uvicorn[standard]>=0.40.0",
    "windfreak>=0.3.0",
]

[tool.uv]
override-dependencies = [
    "numpy>=2",
]

[project.scripts]
experiment-control = "experiment_control:main"
experiment-control-stack = "experiment_control.cli.run_stack:main"
experiment-control-instance-lock-status = "experiment_control.cli.instance_lock_status:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8",
    "ruff>=0.14.14",
    "types-PyYAML>=6.0",
]
